# The sub directories to be built.
# It should be a subset of DIST_SUBDIRS.
SUBDIRS = src

# The directories to be included in the distribution.
DIST_SUBDIRS = bin \
    doc \
    examples \
    src

# The documentation files.
dist_doc_DATA = README

#EXTRA_DIST = BUGS ChangeLog RELEASE CREDITS COPYING.kbd local-scripts/* *.lsm

# The manpages.
# In the following example, "foo.man" will be installed as "foo.1" but
# "quux.3n" will keep its name at install time.
man1_MANS = foo.man
man3_MANS = quux.3n
