####### kdevelop will overwrite this part!!! (begin)##########
bin_PROGRAMS = cybop

## INCLUDES were found outside kdevelop specific part

cybop_SOURCES = main.c 
cybop_LDADD   = 

SUBDIRS = docs 

EXTRA_DIST = main.c 

####### kdevelop will overwrite this part!!! (end)############
# set the include path found by configure
INCLUDES= $(all_includes)

# the library search path.
cybop_LDFLAGS = $(all_libraries) 
                                                                                
